# water-packer

./: .buildinfo  .gitignore  README.md  api.html  benchmark_suite.py  check_bonds.py  examples.html  generate_examples.py  genindex.html  index.html  manual_test.py  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  smoke_test.py  validate_rdf.py
.github/workflows/: docs.yml  publish.yml  tests.yml
_modules/: index.html
_modules/water_packer/: converters.html  distance_manager.html  packer.html
_sources/: api.rst.txt  examples.rst.txt  index.rst.txt  quickstart.rst.txt
benchmark_results/: results.csv
docs/: Makefile  conf.py  examples.rst  index.rst  quickstart.rst
tests/: test_converters.py  test_integration.py  test_packer.py  test_stress.py
water_packer/: __init__.py  constants.py  converters.py  distance_manager.py  packer.py  relaxation.py  spatial_hash.py  volume_estimation.py  water_geometry.py
