[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "water-packer"
version = "0.2.2"
readme = "README.md"
description = "Pack water molecules into atomic systems for molecular simulations"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "ase>=3.22",
]

[project.optional-dependencies]
hyobj = ["hyobj"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
